--- a/config.json
+++ b/config.json
@@ -7,10 +7,11 @@
     },
     "ameba": {
         "neural_network_hidden_layers": 3,
-        "neurons_on_layer": 16,
+        "neurons_on_layer": 121,
         "threhold_of_lostness_weight_coefficient": 0.2,
         "visible_rows": 5,
         "visible_columns": 5,
-        "initial_energy": 100.0
+        "initial_energy": 100.0,
+        "lost_energy_per_move": 1.0
     }
 }
